@@ -9,22 +9,21 @@ import iuh.fit.se.mapper.PastryCategoryMapper;
 import iuh.fit.se.repositories.PastryCategoryRepository;
 import iuh.fit.se.services.PastryCategoryService;
 import lombok.RequiredArgsConstructor;
-import iuh.fit.se.entities.PastryCategory;
-import iuh.fit.se.repositories.PastryCategoryRepository;
-import iuh.fit.se.services.PastryCategoryService;
-import lombok.AccessLevel;
-import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import lombok.AccessLevel;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class PastryCategoryServiceImpl implements PastryCategoryService {
 
-    private final PastryCategoryRepository repository;
-    private final PastryCategoryMapper mapper;
+    PastryCategoryRepository repository;
+    PastryCategoryMapper mapper;
 
     @Override
     public PastryCategoryCreationResponse findById(String id) {
@@ -36,15 +35,23 @@ public class PastryCategoryServiceImpl implements PastryCategoryService {
 
     @Override
     public List<PastryCategoryCreationResponse> findAll() {
-        return repository.findAll()
+        // CŨ: return repository.findAll()... (Lấy hết cả ẩn hiện)
+
+        // MỚI: Chỉ lấy danh mục đang hiện
+        return repository.findByIsActiveTrue()
                 .stream()
                 .map(mapper::toCategoryCreationResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public PastryCategoryCreationResponse save(PastryCategoryCreationRequest request) {
         PastryCategory category = mapper.toCategory(request);
+
+        // Nếu DTO không gửi isActive thì default vẫn true trong entity
+        if (request.getIsActive() != null) {
+            category.setIsActive(request.getIsActive());
+        }
 
         PastryCategory saved = repository.save(category);
 
@@ -63,13 +70,17 @@ public class PastryCategoryServiceImpl implements PastryCategoryService {
         return mapper.toCategoryUpdateResponse(updated);
     }
 
+    /**
+     * Soft delete category: set isActive = false
+     */
+    @Transactional
     @Override
     public boolean delete(String id) {
-        if (!repository.existsById(id)) {
-            return false;
-        }
+        PastryCategory category = repository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Category not found"));
 
-        repository.deleteById(id);
+        category.setIsActive(false);
+        repository.save(category);
         return true;
     }
 }
